<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.moore.joshua.minichat.MainActivity">

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/defaultip"
        android:hint="@string/ipfieldhint"
        android:maxLines="1"
        android:maxLength="15"
        android:id="@+id/ip"/>
    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip"
        android:text="@string/_defaultport"
        android:hint="@string/portfieldhint"
        android:maxLines="1"
        android:maxLength="5"
        android:id="@+id/port"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/connecttext"
        android:onClick="connect"/>

    <TextView
        android:layout_width="400dp"
        android:layout_height="280dp"
        android:id="@+id/textView"
        android:background="@color/white"
        android:layout_below="@+id/port"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="17"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:gravity="bottom"
        />

    <EditText
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/messageEdit"
        android:hint="@string/messagefieldhint"
        android:text="@string/username"
        android:textAlignment="gravity"
        android:gravity="top"
        android:maxLines="4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/version" />

</RelativeLayout>